--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,5 +1,5 @@
 @import "variables";
-// @import "animations";
+ @import "animations";
 @import "layout";
 /*--- COMPONENTS ---*/
 //@import "components/header";
