--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -15,6 +15,7 @@
     transform: translate3d(4px, 0, 0);
   }
 }
+// markets-widget animation start
 @keyframes markets-row {
   from {
     opacity: 1;
@@ -23,3 +24,21 @@
     opacity: 0;
   }
 }
+@keyframes indicate-red{
+  from {
+    color:$red;
+  }
+  to {
+    color: inherit;
+  }
+}
+@keyframes indicate-green{
+  from {
+    color:$green;
+  }
+  to {
+    color: inherit;
+  }
+}
+// markets-widget animation end
+
