--- a/src/assets/scss/components/_dashboard-tools.scss
+++ b/src/assets/scss/components/_dashboard-tools.scss
@@ -9,12 +9,12 @@
     //padding-top: 80px;
     z-index: 900;
     top: 0px;
-    left: -99px;
+    right: -99px;
     height: 100%;
     //max-width: 0px;
     overflow-x: hidden;
     overflow-y: auto;
-    border-right: 4px solid $darker-blue;
+    border-left: 4px solid $darker-blue;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
     background-color: $dark-indigo;
@@ -23,7 +23,7 @@
     -moz-transition: 0.5s ease all;
     transition: 0.5s ease all;
     &:hover{
-      left: 0;
+      right: 0;
       //max-width: 94px;
       -webkit-transition: 0.5s ease all;
       -moz-transition: 0.5s ease all;
