add color order-type

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -75,9 +75,9 @@
         <div class="widget__message-time">{{ message.messageTime }}</div>
       </div>
 
-      <!--<div class="widget__message-day">-->
-        <!--<span>24</span> of <span>july</span>-->
-      <!--</div>-->
+      <div class="widget__message-day">
+        <span>24</span> of <span>july</span>
+      </div>
       <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
         <!--<div class="widget__message">-->
           <!--<div class="widget__message-nickname">Igor</div>-->
