--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -32,7 +32,8 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
+      <span class="orders__type-buy">Buy <span>(Limit)</span></span>
+      <!--<span class="orders__type-sell">Buy <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
       <span>{{order.averagePrice}} USD</span>
