add color sell/buy in my-orders

--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -33,7 +33,7 @@
     </td>
     <td class="table__cell">
       <span class="orders__type-buy">Buy <span>(Limit)</span></span>
-      <!--<span class="orders__type-sell">Buy <span>(Limit)</span></span>-->
+      <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
       <span>{{item.averagePrice}} USD</span>
@@ -237,10 +237,10 @@
       <a class="paginator__link" href="#">1</a>
     </li>
     <li class="paginator__item">
-      <a class="paginator__link" href="#">3</a>
+      <a class="paginator__link" href="#">2</a>
     </li>
     <li class="paginator__item">
-      <a class="paginator__link" href="#">4</a>
+      <a class="paginator__link" href="#">3</a>
     </li>
     <li class="paginator__item">
       <a class="paginator__link" href="#">...</a>
