--- a/src/app/dashboard/orders/orders-history/orders-history.component.html
+++ b/src/app/dashboard/orders/orders-history/orders-history.component.html
@@ -29,7 +29,8 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
+      <span class="orders__type-buy">Buy <span>(Limit)</span></span>
+      <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -55,7 +56,8 @@
       </div>
     </td>
     <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
+      <span class="orders__type-buy">Buy <span>(Limit)</span></span>
+      <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
       <span>4500 USD</span>
@@ -190,10 +192,10 @@
       <a class="paginator__link" href="#">1</a>
     </li>
     <li class="paginator__item">
-      <a class="paginator__link" href="#">3</a>
+      <a class="paginator__link" href="#">2</a>
     </li>
     <li class="paginator__item">
-      <a class="paginator__link" href="#">4</a>
+      <a class="paginator__link" href="#">3</a>
     </li>
     <li class="paginator__item">
       <a class="paginator__link" href="#">...</a>
