--- a/src/app/dashboard/orders/orders-history/orders-history.component.html
+++ b/src/app/dashboard/orders/orders-history/orders-history.component.html
@@ -48,166 +48,33 @@
       <span>{{item.status}}</span>
     </td>
   </tr>
-  <!-- <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span class="orders__type-buy">Buy <span>(Limit)</span></span>
+ <!--<tr class="table__row">-->
+    <!--<td class="table__cell">-->
+      <!--<span>234566113434</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<div class="table__date-time">-->
+        <!--<div>Th 13.06.2018</div>-->
+        <!--<div>10:59:41</div>-->
+      <!--</div>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span class="orders__type-buy">Buy <span>(Limit)</span></span>-->
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.02%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span class="orders__type-buy">Buy <span>(Limit)</span></span>
-      <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.42%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.34%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Sell <span>(Limit)</span></span>
-    </td>
-
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.53%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Sell <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.12%</span>
-    </td>
-    <td class="table__cell">
-      <span>6000 USD</span>
-    </td>
-  </tr>
-  <tr class="table__row">
-    <td class="table__cell">
-      <span>234566113434</span>
-    </td>
-    <td class="table__cell">
-      <div class="table__date-time">
-        <div>Th 13.06.2018</div>
-        <div>10:59:41</div>
-      </div>
-    </td>
-    <td class="table__cell">
-      <span>Buy <span>(Limit)</span></span>
-    </td>
-    <td class="table__cell">
-      <span>4500 USD</span>
-    </td>
-    <td class="table__cell">
-      <span>0.005 BTC</span>
-    </td>
-    <td class="table__cell txt-grey">
-      <span>0.02%</span>
-    </td>
-    <td class="table__cell">
-      <span>6 USD</span>
-    </td>
-  </tr> -->
-
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>4500 USD</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>0.005 BTC</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell txt-grey">-->
+      <!--<span>0.02%</span>-->
+    <!--</td>-->
+    <!--<td class="table__cell">-->
+      <!--<span>6000 USD</span>-->
+    <!--</td>-->
+  <!--</tr>-->
   </tbody>
 
 </table>
