--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
   <div class="content">
 
-    <div style="flex-grow: 1;">
+    <div style="flex-grow: 1; width: 100%;">
 
       <!--<div class="container">-->
       <!--<div class="container container&#45;&#45;dashboard">-->
