--- a/src/app/dashboard/orders/orders-history/orders-history.component.html
+++ b/src/app/dashboard/orders/orders-history/orders-history.component.html
@@ -25,8 +25,8 @@
     </td>
     <td class="table__cell">
       <div class="table__date-time">
-        <div>{{item.created | date:"dd/MM/yyyy"}}</div>
-        <!-- <div>10:59:41</div> -->
+        <div>{{item.created | date:"EEEEEE"}} {{item.created | date:"dd.MM.yyyy"}}</div>
+        <div>{{item.created | date:"HH:mm:ss"}}</div>
       </div>
     </td>
     <td class="table__cell">
