--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -120,7 +120,7 @@
           <th class="table__cell-head table__cell-head--tal table__cell-head--p4" width="21%">Pair</th>
           <th class="table__cell-head table__cell-head--tal table__cell-head--p4" width="25%">Price in <span>{{currencyDisplayMode}}</span></th>
           <th class="table__cell-head table__cell-head--tal table__cell-head--p4" width="17%">Change %</th>
-          <th class="table__cell-head table__cell-head--tar table__cell-head--p4" width="30%">
+          <th class="table__cell-head table__cell-head--tar table__cell-head--p4" width="30%" (click)="sortVolume()">
             <svg class="table__cell-head-arr" width="6" height="8" viewBox="0 0 6 8" fill="none"
                  xmlns="http://www.w3.org/2000/svg">
               <path
