--- a/src/app/dashboard/markets/markets.component.scss
+++ b/src/app/dashboard/markets/markets.component.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.widget__table-wrap{
+  margin-right: 10px !important;
+}
+
 //---------
 
 .tab-no-active{
@@ -35,22 +39,22 @@ thead, tbody tr {
 //scrollbar  styles
 /* width */
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #E5E5E5;
+  background: rgba(255,255,255, .2);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #555;
+  background: #2a2a2a;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #2a2a2a;
 }
 
 //----------
