--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -123,6 +123,21 @@
         fill: #fff;
       }
     }
+    &__type-buy{
+      color:$green;
+    }
+    &__type-sell{
+      color:$red;
+    }
+    &__type-stop{
+      color:$darker-blue;
+    }
+    .table__date-time{
+      color: $light-blue;
+      div:nth-child(2) {
+        color: $light-blue;
+      }
+    }
   }
 }
 @media (min-width:1200px) {
@@ -139,12 +154,7 @@
           color:$light-blue;
         }
       }
-      &__type-buy{
-        color:$green;
-      }
-      &__type-sell{
-        color:$red;
-      }
+
       &__for{
         color:$light-blue;
       }
