--- a/src/assets/scss/pages/settings/_settings.scss
+++ b/src/assets/scss/pages/settings/_settings.scss
@@ -115,8 +115,8 @@
     // margin-left: -12px;
     // margin-right: -12px;
     &__note {
-      width: calc(100% + 48px);
-      left: -24px;
+      //width: calc(100% + 48px);
+      //left: -24px;
     }
   }
 }
