--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -36,6 +36,7 @@
 @import "components/dashboard-tools";
 @import "components/trading-notification";
 @import "components/order-edit-popup";
+@import "components/filters-popup";
 //@import "components/footer";
 @import "components/modal";
 /*--- PAGES ---*/
