--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -105,7 +105,9 @@
 
 
     <!--table start-->
+    <ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'">
     <div class="widget__table-wrap">
+
       <table class="table widget__table">
         <thead>
         <tr style="margin-right: 30px;">
@@ -130,6 +132,7 @@
           </th>
         </tr>
         </thead>
+
         <tbody class="table__body table__body--none-shadow">
 
         <ng-container *ngFor="let pair of pairs | sort:'currencyPairName'">
@@ -162,8 +165,11 @@
           <tr style="height: 4px;"></tr>
         </ng-container>
         </tbody>
+
       </table>
+
     </div>
+    </ng-scrollbar>
     <!--table end-->
     <div class="widget__search">
       <input class="widget__search-input" type="text" required="" placeholder="Search" (input)="searchPair($event.target.value)">
