--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -205,7 +205,7 @@
         content: "";
         left: 0;
         width: 100%;
-        height: 100%;
+        height: fit-content;
         z-index: 0;
         opacity: 0;
         animation: markets-row 1s ease-in-out;
@@ -227,7 +227,7 @@
         content: "";
         left: 0;
         width: 100%;
-        height: 100%;
+        height: fit-content;
         z-index: 0;
         opacity: 0;
         animation: markets-row 1s ease-in-out;
