--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -77,9 +77,9 @@
       <div class="row row--jcsb row--aic widget__trading-row">
         <div class="dropdown widget__limit-dropdown" [ngClass]="{'dropdown--open': isDropdownOpen}"
              (click)="toggleLimitDropdown()">
-          <div class="dropdown__btn">{{dropdownLimitValue}}</div>
+          <div class="dropdown__btn">{{showLimit(dropdownLimitValue)}}</div>
           <ul class="dropdown__list">
-            <li class="dropdown__item" (click)="selectedLimit(limit)" *ngFor="let limit of limitsData">{{limit}}</li>
+            <li class="dropdown__item" (click)="selectedLimit(limit)" *ngFor="let limit of limitsData">{{showLimit(limit)}}</li>
           </ul>
         </div>
         <div class="row row-jcsb">
