added build timestamp chart

--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -105,7 +105,8 @@
 
           <my-date-picker
             name="from"
-            [options]="myDatePickerOptions">
+            <!--[options]="myDatePickerOptions"-->
+          >
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
@@ -114,7 +115,8 @@
 
           <my-date-picker
             name="to"
-            [options]="myDatePickerOptions">
+            <!--[options]="myDatePickerOptions"-->
+          >
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
