--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -146,7 +146,8 @@
 
             <my-date-picker
               name="from"
-              [options]="myDatePickerOptions">
+              <!--[options]="myDatePickerOptions"-->
+            >
             </my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
@@ -155,7 +156,8 @@
 
             <my-date-picker
               name="to"
-              [options]="myDatePickerOptions">
+              <!--[options]="myDatePickerOptions"-->
+            >
             </my-date-picker>
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
@@ -200,7 +202,8 @@
 
           <my-date-picker
             name="from"
-            [options]="myDatePickerOptions">
+            <!--[options]="myDatePickerOptions"-->
+          >
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
@@ -209,7 +212,8 @@
 
           <my-date-picker
             name="to"
-            [options]="myDatePickerOptions">
+            <!--[options]="myDatePickerOptions"-->
+          >
           </my-date-picker>
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
