--- a/src/app/dashboard/orders/open-orders/open-orders.component.html
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.html
@@ -36,13 +36,13 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.amountWithCommissionForAcceptor}} USD</span>
+      <span>{{item.exExchangeRate}} USD</span>
     </td>
     <td class="table__cell">
       <span>{{item.amountConvert}} BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionAmountForAcceptor}}%</span>
+      <span>{{item.commissionValue}}%</span>
     </td>
     <td class="table__cell">
       <span>{{item.amountWithCommission}} USD</span>
