--- a/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
@@ -24,9 +24,9 @@
         <span>{{currentCurrencyInfo.percentChange >= 0 ? '+' : '-'}}{{currentCurrencyInfo.percentChange}}%</span>
         <img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="">
         <img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="">
-        <span style="margin-left: 10px;">({{currentCurrencyInfo.currencyRate - currentCurrencyInfo.lastCurrencyRate}} USD)</span>
+        <span style="margin-left: 10px;">({{currentCurrencyInfo.currencyRate - currentCurrencyInfo.lastCurrencyRate}} {{ firstCurrency }})</span>
       </div>
-      <div class="currency-pair-info__price">{{currentCurrencyInfo.currencyRate}} USD</div>
+      <div class="currency-pair-info__price">{{currentCurrencyInfo.currencyRate}} {{ firstCurrency }}</div>
     </div>
     <div class="currency-pair-info__item">
       <div class="currency-pair-info__item-title">24h hight</div>
@@ -38,14 +38,14 @@
     </div>
     <div class="currency-pair-info__item">
       <div class="currency-pair-info__item-title">24h volume</div>
-      <span class="currency-pair-info__item-value">{{currentCurrencyInfo.volume24h | number:'1.0-0'}} million  USD</span>
+      <span class="currency-pair-info__item-value">{{currentCurrencyInfo.volume24h | number:'1.0-0'}} million  {{ firstCurrency }}</span>
     </div>
     <div class="currency-pair-info__item">
       <div class="currency-pair-info__item-title">You have</div>
       <div class="currency-pair-info__you-have">
-        <span class="currency-pair-info__item-value">43 522 764  USD</span>
+        <span class="currency-pair-info__item-value">{{ currentCurrencyInfo.balanceByCurrency1 | number:'1.0-0' }} {{ firstCurrency }}</span>
         <span class="currency-pair-info__vertical-line"></span>
-        <span class="currency-pair-info__item-value">1.22764 BTC</span>
+        <span class="currency-pair-info__item-value">{{ currentCurrencyInfo.balanceByCurrency2 | number:'1.0-0' }} {{ secondCurrency }}</span>
       </div>
     </div>
   </div>
