--- a/src/app/dashboard/orders/orders-history/orders-history.component.html
+++ b/src/app/dashboard/orders/orders-history/orders-history.component.html
@@ -18,7 +18,7 @@
     <th class="table__cell-head table__cell-head--tal">Status of order</th>
   </tr>
   </thead>
-  <tbody class="table__body table__body--none-shadow" *ngIf="data">
+  <tbody class="table__body table__body--none-shadow" *ngIf="historyOrders">
 
 
   <!--// -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
@@ -54,7 +54,7 @@
 
   <!--// -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
-  <tr class="table__row" *ngFor="let item of showOrders | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
+  <tr class="table__row" *ngFor="let item of historyOrders | paginate: { itemsPerPage: countPerPage, currentPage: currentPage }">
     <td class="table__cell">
       <span>{{item.id}}</span>
     </td>
@@ -69,13 +69,13 @@
       <!--<span class="orders__type-sell">Sell <span>(Limit)</span></span>-->
     </td>
     <td class="table__cell">
-      <span>{{item.amountWithCommissionForAcceptor}} USD</span>
+      <span>{{item.exExchangeRate}} USD</span>
     </td>
     <td class="table__cell">
       <span>{{item.amountConvert}} BTC</span>
     </td>
     <td class="table__cell txt-grey">
-      <span>{{item.commissionAmountForAcceptor}}%</span>
+      <span>{{item.commissionValue}}%</span>
     </td>
     <td class="table__cell">
       <span>{{item.amountWithCommission}} USD</span>
